SalesforceMetaData/metadata/objects/bofc__BOFCFieldsAnalyzer__c.object
<CustomObject>
    <fields>
        <fullName>bofc__Field_Analyzer_Name__c</fullName>
        <label>Field Analyzer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Fields__c</fullName>
        <label># of Fields</label>
        <summaryForeignKey>bofc__BOFCFieldsAnalyzerResult__c.bofc__BOFCFieldsAnalyzer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>bofc__Filter__c</fullName>
        <label>Filter Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__IsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__Last_Analyzed__c</fullName>
        <label>Last Analyzed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bofc__Last_Batch_Id__c</fullName>
        <label>Last Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Object_Label__c</fullName>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Record_Types__c</fullName>
        <label># of Record Types</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Records__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BOFCFieldsAnalyzer</label>
    <nameField>
        <label>Analyser No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCFieldsAnalyzer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>